# ArchiveUI

./: .gitignore  README.md
.claude/: launch.json
.github/workflows/: release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
ui/: index.html  main.js  style.css
