[package]
name = "archive-org-uploader"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-only"

[lib]
name = "archive_org_uploader_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
