[package]
name = "archive-ui"
version = "0.1.15"
edition = "2021"
license = "GPL-2.0-only"

[lib]
name = "archive_ui_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keepawake = "0.6"
